More account password reset support.

--- a/django/templates/accounts/login.html
+++ b/django/templates/accounts/login.html
@@ -44,6 +44,7 @@
 
 <div class="links">
     <p><a href="{% url 'accounts:password_reset' %}">Forgot your password?</a></p>
+    <p><a href="{% url 'accounts:resend_verification' %}">Didn't receive verification email?</a></p>
     <p>Don't have an account? <a href="{% url 'accounts:register' %}">Sign up</a></p>
     <p><a href="{% url 'home' %}">Back to search</a></p>
 </div>
