--- a/django/templates/accounts/register_complete.html
+++ b/django/templates/accounts/register_complete.html
@@ -16,6 +16,7 @@
 </div>
 
 <div class="links">
+    <p>Didn't receive the email? <a href="{% url 'accounts:resend_verification' %}">Resend verification email</a></p>
     <p><a href="{% url 'home' %}">Back to search</a></p>
 </div>
 {% endblock %}
