--- a/django/templates/accounts/verify_email.html
+++ b/django/templates/accounts/verify_email.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="text-center">
-        <p>Please try <a href="{% url 'accounts:register' %}">registering again</a> or contact support if you continue to have issues.</p>
+        <p>Please try <a href="{% url 'accounts:resend_verification' %}">requesting a new verification email</a> or <a href="{% url 'accounts:register' %}">register again</a>.</p>
     </div>
 {% endif %}
 
