Update the copyright notices.

--- a/django/templates/accounts/base.html
+++ b/django/templates/accounts/base.html
@@ -251,7 +251,7 @@
             <a href="{% url 'about' %}">About</a>
             <a href="{% url 'contact:contact' %}">Contact</a>
             <a href="{% url 'contact:feedback' %}">Feedback</a>
-            <p>&copy; 2024 SKOL Project Contributors. Licensed under GPLv3.</p>
+            <p>&copy; 2019-2026 SKOL Project Contributors. Licensed under GPLv3.</p>
         </div>
     </div>
 </body>
