--- a/django/templates/about.html
+++ b/django/templates/about.html
@@ -332,7 +332,7 @@
             <a href="{% url 'about' %}">About</a>
             <a href="{% url 'contact:contact' %}">Contact</a>
             <a href="{% url 'contact:feedback' %}">Feedback</a>
-            <p style="margin-top: 15px;">&copy; 2024 SKOL Project Contributors. Licensed under GPLv3.</p>
+            <p style="margin-top: 15px;">&copy; 2019-2026 SKOL Project Contributors. Licensed under GPLv3.</p>
         </div>
     </div>
 </body>
