Wikipedia-inspired: SKOL is a Synoptic Key.

--- a/django/templates/about.html
+++ b/django/templates/about.html
@@ -173,8 +173,34 @@
 
         <h2>What is SKOL?</h2>
         <p>
-            SKOL (Synoptic Key of Life) is a research project that
-            applies machine learning and natural language processing
+            SKOL is a Synoptic Key. If you've used a nature guide,
+            you've likely encountered a dichotomous key. This is a
+            list of paired choices that lead the user to identify a
+            species based on observable characteristics. A synoptic
+            key, on the other hand, allows users to start their search
+            from any characteristic they observe, making it more
+            flexible and user-friendly.
+        </p>
+        <p>
+            There are good synoptic keys on the Internet for various
+            groups of organisms, including some good ones for fungi.
+            SKOL aims to be a synoptic key for all fungi described in
+            the open access mycological taxonomic literature. We want
+            the machines to do the hard work of reading and
+            understanding the literature, so that human users can
+            simply describe what they see and find matching species
+            descriptions.
+        </p>
+        <p>
+            SKOL guides you through creating a technical description of
+            the organism you have in front of you. Your description
+            becomes part of the synoptic key, accessible to other users
+            searching for similar organisms. Along the way, SKOL connects
+            you to relevant taxonomic literature, helping you learn
+            more about the species you are studying.
+        </p>
+        <p>
+            SKOL applies machine learning and natural language processing
             techniques to the challenge of searching and navigating
             open mycological taxonomic literature. The project aims to
             make the vast corpus of fungal taxonomy publications more
