--- a/django/templates/index.html
+++ b/django/templates/index.html
@@ -365,6 +365,7 @@
 
         <div class="footer">
             <a href="{% url 'about' %}">About</a>
+            <a href="{% url 'sources' %}">Sources</a>
             <a href="{% url 'contact:contact' %}">Contact</a>
             <a href="{% url 'contact:feedback' %}">Feedback</a>
             <p>&copy; 2019-2026 SKOL Project Contributors. Licensed under GPLv3.</p>
