Provide a little more space for identifiers.

--- a/django/templates/index.html
+++ b/django/templates/index.html
@@ -749,6 +749,7 @@
 
         .add-identifier-form input {
             flex: 1;
+            min-width: 150px;
             padding: 8px 12px;
         }
 
